@@ -38,7 +38,6 @@ import greencity.filters.EcoNewsSpecification;
 import greencity.filters.SearchCriteria;
 import greencity.rating.RatingCalculation;
 import greencity.repository.EcoNewsRepo;
-import greencity.repository.EcoNewsSearchRepo;
 import greencity.repository.UserRepo;
 import jakarta.persistence.criteria.CriteriaBuilder;
 import jakarta.persistence.criteria.Join;
@@ -78,7 +77,6 @@ public class EcoNewsServiceImpl implements EcoNewsService {
     private final FileService fileService;
     private final AchievementCalculation achievementCalculation;
     private final RatingCalculation ratingCalculation;
-    private final EcoNewsSearchRepo ecoNewsSearchRepo;
     private final List<String> languageCode = List.of("en", "ua");
     private final UserService userService;
     private final UserRepo userRepo;
@@ -135,14 +133,10 @@ public class EcoNewsServiceImpl implements EcoNewsService {
 
     /**
      * {@inheritDoc}
-     *
-     * @author Danylo Hlynskyi.
      */
     @Override
     public List<EcoNewsDto> getAllByUser(UserVO user) {
-        return ecoNewsRepo.findAllByAuthorId(user.getId()).stream()
-            .map(ecoNews -> modelMapper.map(ecoNews, EcoNewsDto.class))
-            .collect(Collectors.toList());
+        return mapEcoNewsListToEcoNewsDtoList(ecoNewsRepo.findAllByAuthorId(user.getId()));
     }
 
     /**
@@ -156,15 +150,19 @@ public class EcoNewsServiceImpl implements EcoNewsService {
         Long authorId,
         boolean favorite,
         String email) {
+        Long currentUserId = (email != null && !email.isEmpty()) ? getUserIdByEmail(email) : null;
+
         return CollectionUtils.isEmpty(tags) && StringUtils.isEmpty(title) && authorId == null && !favorite
             ? buildPageableAdvancedGenericDto(ecoNewsRepo.findAll(
                 PageRequest.of(page.getPageNumber(), page.getPageSize(),
-                    Sort.by(Sort.Direction.DESC, "creationDate"))))
+                    Sort.by(Sort.Direction.DESC, "creationDate"))),
+                currentUserId)
             : buildPageableAdvancedGenericDto(ecoNewsRepo.findAll(
                 (root, query, criteriaBuilder) -> getPredicate(root, criteriaBuilder, tags, title, authorId, favorite,
-                    email),
+                    currentUserId),
                 PageRequest.of(page.getPageNumber(), page.getPageSize(),
-                    Sort.by(Sort.Direction.DESC, "creationDate"))));
+                    Sort.by(Sort.Direction.DESC, "creationDate"))),
+                currentUserId);
     }
 
     private PageableAdvancedDto<EcoNewsDto> buildPageableAdvancedDto(Page<EcoNews> ecoNewsPage) {
@@ -184,9 +182,10 @@ public class EcoNewsServiceImpl implements EcoNewsService {
             ecoNewsPage.isLast());
     }
 
-    private PageableAdvancedDto<EcoNewsGenericDto> buildPageableAdvancedGenericDto(Page<EcoNews> ecoNewsPage) {
+    private PageableAdvancedDto<EcoNewsGenericDto> buildPageableAdvancedGenericDto(Page<EcoNews> ecoNewsPage,
+        Long currentUserId) {
         List<EcoNewsGenericDto> ecoNewsDtos = ecoNewsPage.stream()
-            .map(this::getEcoNewsGenericDtoWithEnTags)
+            .map(ecoNews -> getEcoNewsGenericDtoWithEnTags(ecoNews, currentUserId))
             .collect(Collectors.toList());
 
         return new PageableAdvancedDto<>(
@@ -206,8 +205,11 @@ public class EcoNewsServiceImpl implements EcoNewsService {
      */
     @Override
     public EcoNewsVO findById(Long id) {
+        return modelMapper.map(findEcoNewsById(id), EcoNewsVO.class);
+    }
+
+    private EcoNews findEcoNewsById(Long id) {
         return ecoNewsRepo.findById(id)
-            .map(n -> modelMapper.map(n, EcoNewsVO.class))
             .orElseThrow(() -> new NotFoundException(ErrorMessage.ECO_NEW_NOT_FOUND_BY_ID + id));
     }
 
@@ -216,8 +218,7 @@ public class EcoNewsServiceImpl implements EcoNewsService {
      */
     @Override
     public EcoNewsDto findDtoByIdAndLanguage(Long id, String language) {
-        EcoNews ecoNews = ecoNewsRepo.findById(id)
-            .orElseThrow(() -> new NotFoundException(ErrorMessage.ECO_NEW_NOT_FOUND_BY_ID + id));
+        EcoNews ecoNews = findEcoNewsById(id);
         List<String> tags = new ArrayList<>();
         for (String lang : languageCode) {
             tags.addAll(ecoNews.getTags().stream().flatMap(t -> t.getTagTranslations().stream())
@@ -234,15 +235,15 @@ public class EcoNewsServiceImpl implements EcoNewsService {
     @CacheEvict(value = CacheConstants.NEWEST_ECO_NEWS_CACHE_NAME, allEntries = true)
     @Override
     public void delete(Long id, UserVO user) {
-        EcoNewsVO ecoNewsVO = findById(id);
-        if (user.getRole() != Role.ROLE_ADMIN && !user.getId().equals(ecoNewsVO.getAuthor().getId())) {
+        EcoNews ecoNews = findEcoNewsById(id);
+        if (user.getRole() != Role.ROLE_ADMIN && !user.getId().equals(ecoNews.getAuthor().getId())) {
             throw new BadRequestException(ErrorMessage.USER_HAS_NO_PERMISSION);
         }
         ratingCalculation.ratingCalculation(ratingPointsRepo.findByNameOrThrow("UNDO_CREATE_NEWS"), user);
         achievementCalculation.calculateAchievement(user,
             AchievementCategoryType.CREATE_NEWS, AchievementAction.DELETE);
 
-        ecoNewsRepo.deleteById(ecoNewsVO.getId());
+        ecoNewsRepo.deleteById(ecoNews.getId());
     }
 
     @Transactional
@@ -251,25 +252,15 @@ public class EcoNewsServiceImpl implements EcoNewsService {
         ecoNewsRepo.deleteEcoNewsWithIds(listId);
     }
 
-    /**
-     * {@inheritDoc}
-     */
     @Override
-    public PageableDto<SearchNewsDto> search(String searchQuery, String languageCode) {
-        Page<EcoNews> page = ecoNewsSearchRepo.find(PageRequest.of(0, 3), searchQuery, languageCode);
-        return getSearchNewsDtoPageableDto(page);
-    }
-
-    @Override
-    public PageableDto<SearchNewsDto> search(Pageable pageable, String searchQuery, String languageCode) {
-        Page<EcoNews> page = ecoNewsSearchRepo.find(pageable, searchQuery, languageCode);
-        return getSearchNewsDtoPageableDto(page);
+    public PageableDto<SearchNewsDto> search(Pageable pageable, String searchQuery, Boolean isFavorite, Long userId) {
+        return getSearchNewsDtoPageableDto(ecoNewsRepo.find(pageable, searchQuery, isFavorite, userId));
     }
 
     private PageableDto<SearchNewsDto> getSearchNewsDtoPageableDto(Page<EcoNews> page) {
         List<SearchNewsDto> searchNewsDtos = page.stream()
             .map(ecoNews -> modelMapper.map(ecoNews, SearchNewsDto.class))
-            .collect(Collectors.toList());
+            .toList();
 
         return new PageableDto<>(
             searchNewsDtos,
@@ -322,7 +313,7 @@ public class EcoNewsServiceImpl implements EcoNewsService {
     @CacheEvict(value = CacheConstants.NEWEST_ECO_NEWS_CACHE_NAME, allEntries = true)
     @Override
     public void update(EcoNewsDtoManagement ecoNewsDtoManagement, MultipartFile image) {
-        EcoNews toUpdate = modelMapper.map(findById(ecoNewsDtoManagement.getId()), EcoNews.class);
+        EcoNews toUpdate = findEcoNewsById(ecoNewsDtoManagement.getId());
         enhanceWithNewManagementData(toUpdate, ecoNewsDtoManagement, image);
         try {
             ecoNewsRepo.save(toUpdate);
@@ -338,7 +329,7 @@ public class EcoNewsServiceImpl implements EcoNewsService {
     @CacheEvict(value = CacheConstants.NEWEST_ECO_NEWS_CACHE_NAME, allEntries = true)
     @Override
     public EcoNewsGenericDto update(UpdateEcoNewsDto updateEcoNewsDto, MultipartFile image, UserVO user) {
-        EcoNews toUpdate = modelMapper.map(findById(updateEcoNewsDto.getId()), EcoNews.class);
+        EcoNews toUpdate = findEcoNewsById(updateEcoNewsDto.getId());
         if (user.getRole() != Role.ROLE_ADMIN && !user.getId().equals(toUpdate.getAuthor().getId())) {
             throw new BadRequestException(ErrorMessage.USER_HAS_NO_PERMISSION);
         }
@@ -354,8 +345,7 @@ public class EcoNewsServiceImpl implements EcoNewsService {
 
     @Override
     public void addToFavorites(Long ecoNewsId, String email) {
-        EcoNews ecoNews = ecoNewsRepo.findById(ecoNewsId)
-            .orElseThrow(() -> new NotFoundException(ErrorMessage.ECO_NEW_NOT_FOUND_BY_ID + ecoNewsId));
+        EcoNews ecoNews = findEcoNewsById(ecoNewsId);
 
         User currentUser = userRepo.findByEmail(email)
             .orElseThrow(() -> new NotFoundException(ErrorMessage.USER_NOT_FOUND_BY_EMAIL + email));
@@ -370,8 +360,7 @@ public class EcoNewsServiceImpl implements EcoNewsService {
 
     @Override
     public void removeFromFavorites(Long ecoNewsId, String email) {
-        EcoNews ecoNews = ecoNewsRepo.findById(ecoNewsId)
-            .orElseThrow(() -> new NotFoundException(ErrorMessage.ECO_NEW_NOT_FOUND_BY_ID + ecoNewsId));
+        EcoNews ecoNews = findEcoNewsById(ecoNewsId);
 
         User currentUser = userRepo.findByEmail(email)
             .orElseThrow(() -> new NotFoundException(ErrorMessage.USER_NOT_FOUND_BY_EMAIL + email));
@@ -437,21 +426,21 @@ public class EcoNewsServiceImpl implements EcoNewsService {
      */
     @Override
     public void like(UserVO userVO, Long id) {
-        EcoNewsVO ecoNewsVO = findById(id);
+        EcoNews ecoNews = findEcoNewsById(id);
 
-        ecoNewsVO.getUsersDislikedNews().removeIf(u -> u.getId().equals(userVO.getId()));
+        ecoNews.getUsersDislikedNews().removeIf(u -> u.getId().equals(userVO.getId()));
 
-        boolean isLiked = ecoNewsVO.getUsersLikedNews().stream()
+        boolean isLiked = ecoNews.getUsersLikedNews().stream()
             .anyMatch(u -> u.getId().equals(userVO.getId()));
 
-        boolean isAuthor = ecoNewsVO.getAuthor().getId().equals(userVO.getId());
+        boolean isAuthor = ecoNews.getAuthor().getId().equals(userVO.getId());
 
         if (isLiked) {
             achievementCalculation.calculateAchievement(userVO,
                 AchievementCategoryType.LIKE_NEWS, AchievementAction.DELETE);
             ratingCalculation.ratingCalculation(ratingPointsRepo.findByNameOrThrow("UNDO_LIKE_NEWS"),
                 userVO);
-            ecoNewsVO.getUsersLikedNews().removeIf(u -> u.getId().equals(userVO.getId()));
+            ecoNews.getUsersLikedNews().removeIf(u -> u.getId().equals(userVO.getId()));
         } else {
             if (isAuthor) {
                 throw new BadRequestException(ErrorMessage.USER_HAS_NO_PERMISSION);
@@ -459,18 +448,17 @@ public class EcoNewsServiceImpl implements EcoNewsService {
             achievementCalculation.calculateAchievement(userVO,
                 AchievementCategoryType.LIKE_NEWS, AchievementAction.ASSIGN);
             ratingCalculation.ratingCalculation(ratingPointsRepo.findByNameOrThrow("LIKE_NEWS"), userVO);
-            ecoNewsVO.getUsersLikedNews().add(userVO);
+            ecoNews.getUsersLikedNews().add(modelMapper.map(userVO, User.class));
         }
 
-        sendNotification(ecoNewsVO, userVO, !isLiked);
-        ecoNewsRepo.save(modelMapper.map(ecoNewsVO, EcoNews.class));
+        sendNotification(ecoNews, userVO, !isLiked);
+        ecoNewsRepo.save(modelMapper.map(ecoNews, EcoNews.class));
     }
 
-    private void sendNotification(EcoNewsVO ecoNewsVO, UserVO actionUser, boolean isLike) {
-        UserVO targetUser = userService.findById(ecoNewsVO.getAuthor().getId());
-        userNotificationService.createOrUpdateLikeNotification(
-            targetUser, actionUser, ecoNewsVO.getId(), formatNewsTitle(ecoNewsVO.getTitle()),
-            NotificationType.ECONEWS_LIKE, isLike);
+    private void sendNotification(EcoNews ecoNews, UserVO actionUser, boolean isLike) {
+        UserVO targetUser = userService.findById(ecoNews.getAuthor().getId());
+        userNotificationService.createOrUpdateLikeNotification(targetUser, actionUser, ecoNews.getId(),
+            formatNewsTitle(ecoNews.getTitle()), NotificationType.ECONEWS_LIKE, isLike);
     }
 
     private String formatNewsTitle(String newsTitle) {
@@ -486,18 +474,18 @@ public class EcoNewsServiceImpl implements EcoNewsService {
      */
     @Override
     public void dislike(UserVO userVO, Long id) {
-        EcoNewsVO ecoNewsVO = findById(id);
-        if (ecoNewsVO.getUsersLikedNews().stream().anyMatch(user -> user.getId().equals(userVO.getId()))) {
-            ecoNewsVO.getUsersLikedNews().removeIf(u -> u.getId().equals(userVO.getId()));
-            userNotificationService.removeActionUserFromNotification(ecoNewsVO.getAuthor(), userVO, id,
-                NotificationType.ECONEWS_LIKE);
+        EcoNews ecoNews = findEcoNewsById(id);
+        if (ecoNews.getUsersLikedNews().stream().anyMatch(user -> user.getId().equals(userVO.getId()))) {
+            ecoNews.getUsersLikedNews().removeIf(u -> u.getId().equals(userVO.getId()));
+            userNotificationService.removeActionUserFromNotification(modelMapper.map(ecoNews.getAuthor(), UserVO.class),
+                userVO, id, NotificationType.ECONEWS_LIKE);
         }
-        if (ecoNewsVO.getUsersDislikedNews().stream().anyMatch(user -> user.getId().equals(userVO.getId()))) {
-            ecoNewsVO.getUsersDislikedNews().removeIf(u -> u.getId().equals(userVO.getId()));
+        if (ecoNews.getUsersDislikedNews().stream().anyMatch(user -> user.getId().equals(userVO.getId()))) {
+            ecoNews.getUsersDislikedNews().removeIf(u -> u.getId().equals(userVO.getId()));
         } else {
-            ecoNewsVO.getUsersDislikedNews().add(userVO);
+            ecoNews.getUsersDislikedNews().add(modelMapper.map(userVO, User.class));
         }
-        ecoNewsRepo.save(modelMapper.map(ecoNewsVO, EcoNews.class));
+        ecoNewsRepo.save(ecoNews);
     }
 
     /**
@@ -505,8 +493,7 @@ public class EcoNewsServiceImpl implements EcoNewsService {
      */
     @Override
     public Integer countLikesForEcoNews(Long id) {
-        EcoNewsVO ecoNewsVO = findById(id);
-        return ecoNewsVO.getUsersLikedNews().size();
+        return findEcoNewsById(id).getUsersLikedNews().size();
     }
 
     /**
@@ -514,8 +501,7 @@ public class EcoNewsServiceImpl implements EcoNewsService {
      */
     @Override
     public Integer countDislikesForEcoNews(Long id) {
-        EcoNewsVO ecoNewsV0 = findById(id);
-        return ecoNewsV0.getUsersDislikedNews().size();
+        return findEcoNewsById(id).getUsersDislikedNews().size();
     }
 
     /**
@@ -523,8 +509,7 @@ public class EcoNewsServiceImpl implements EcoNewsService {
      */
     @Override
     public Boolean checkNewsIsLikedByUser(Long id, Long userId) {
-        EcoNewsVO ecoNewsVO = findById(id);
-        return ecoNewsVO.getUsersLikedNews().stream().anyMatch(u -> u.getId().equals(userId));
+        return findEcoNewsById(id).getUsersLikedNews().stream().anyMatch(u -> u.getId().equals(userId));
     }
 
     /**
@@ -590,10 +575,10 @@ public class EcoNewsServiceImpl implements EcoNewsService {
             .map(TagTranslation::getName)
             .collect(Collectors.toList());
 
-        return buildEcoNewsGenericDto(ecoNews, tags);
+        return buildEcoNewsGenericDto(ecoNews, tags, null);
     }
 
-    private EcoNewsGenericDto getEcoNewsGenericDtoWithEnTags(EcoNews ecoNews) {
+    private EcoNewsGenericDto getEcoNewsGenericDtoWithEnTags(EcoNews ecoNews, Long currentUserId) {
         List<String> tags = new ArrayList<>();
         for (String language : languageCode) {
             tags.addAll(ecoNews.getTags().stream()
@@ -603,14 +588,18 @@ public class EcoNewsServiceImpl implements EcoNewsService {
                 .toList());
         }
 
-        return buildEcoNewsGenericDto(ecoNews, tags);
+        return buildEcoNewsGenericDto(ecoNews, tags, currentUserId);
     }
 
-    private EcoNewsGenericDto buildEcoNewsGenericDto(EcoNews ecoNews, List<String> tags) {
+    private EcoNewsGenericDto buildEcoNewsGenericDto(EcoNews ecoNews, List<String> tags, Long currentUserId) {
         User author = ecoNews.getAuthor();
         EcoNewsAuthorDto ecoNewsAuthorDto = new EcoNewsAuthorDto(author.getId(), author.getName());
+
         int countOfComments = commentService.countCommentsForEcoNews(ecoNews.getId());
         int countOfEcoNews = ecoNewsRepo.totalCountOfCreationNews();
+
+        boolean isFavorite = isCurrentUserFollower(ecoNews, currentUserId);
+
         return EcoNewsGenericDto.builder()
             .id(ecoNews.getId())
             .imagePath(ecoNews.getImagePath())
@@ -625,7 +614,13 @@ public class EcoNewsServiceImpl implements EcoNewsService {
             .likes(ecoNews.getUsersLikedNews() != null ? ecoNews.getUsersLikedNews().size() : 0)
             .countComments(countOfComments)
             .countOfEcoNews(countOfEcoNews)
+            .isFavorite(isFavorite)
             .build();
+    }
+
+    private boolean isCurrentUserFollower(EcoNews ecoNews, Long currentUserId) {
+        return ecoNews.getFollowers().stream()
+            .anyMatch(user -> user.getId().equals(currentUserId));
     }
 
     private EcoNewsDto getEcoNewsDto(EcoNews ecoNews, List<String> list) {
@@ -653,9 +648,7 @@ public class EcoNewsServiceImpl implements EcoNewsService {
      */
     @Override
     public EcoNewContentSourceDto getContentAndSourceForEcoNewsById(Long id) {
-        EcoNews ecoNews = ecoNewsRepo.findById(id)
-            .orElseThrow(() -> new NotFoundException(ErrorMessage.ECO_NEW_NOT_FOUND_BY_ID + id));
-        return getContentSourceEcoNewsDto(ecoNews);
+        return getContentSourceEcoNewsDto(findEcoNewsById(id));
     }
 
     private EcoNewContentSourceDto getContentSourceEcoNewsDto(EcoNews ecoNews) {
@@ -698,30 +691,20 @@ public class EcoNewsServiceImpl implements EcoNewsService {
 
     @Override
     public Set<UserVO> findUsersWhoLikedPost(Long id) {
-        EcoNews ecoNews = ecoNewsRepo
-            .findById(id)
-            .orElseThrow(() -> new NotFoundException(ErrorMessage.ECO_NEW_NOT_FOUND_BY_ID + id));
-        Set<User> usersLikedNews = ecoNews.getUsersLikedNews();
-        return usersLikedNews.stream().map(u -> modelMapper.map(u, UserVO.class)).collect(Collectors.toSet());
+        return findEcoNewsById(id).getUsersLikedNews().stream()
+            .map(u -> modelMapper.map(u, UserVO.class))
+            .collect(Collectors.toSet());
     }
 
     @Override
     public Set<UserVO> findUsersWhoDislikedPost(Long id) {
-        EcoNews ecoNews = ecoNewsRepo
-            .findById(id)
-            .orElseThrow(() -> new NotFoundException(ErrorMessage.ECO_NEW_NOT_FOUND_BY_ID + id));
-        Set<User> usersDislikedNews = ecoNews.getUsersDislikedNews();
-        return usersDislikedNews.stream().map(u -> modelMapper.map(u, UserVO.class)).collect(Collectors.toSet());
+        return findEcoNewsById(id).getUsersDislikedNews().stream()
+            .map(u -> modelMapper.map(u, UserVO.class))
+            .collect(Collectors.toSet());
     }
 
-    Predicate getPredicate(
-        Root<EcoNews> root,
-        CriteriaBuilder criteriaBuilder,
-        List<String> tags,
-        String title,
-        Long authorId,
-        boolean favorite,
-        String email) {
+    Predicate getPredicate(Root<EcoNews> root, CriteriaBuilder criteriaBuilder, List<String> tags, String title,
+        Long authorId, boolean favorite, Long currentUserId) {
         List<Predicate> predicates = new ArrayList<>();
         if (CollectionUtils.isNotEmpty(tags)) {
             predicates.add(predicateForTags(criteriaBuilder, root, tags));
@@ -735,9 +718,8 @@ public class EcoNewsServiceImpl implements EcoNewsService {
             predicates.add(criteriaBuilder.equal(users.get(ECO_NEWS_AUTHOR_ID), authorId));
         }
         if (favorite) {
-            User currentUser = getUserByEmail(email);
             Join<EcoNews, User> followers = root.join("followers");
-            predicates.add(criteriaBuilder.equal(followers.get(ECO_NEWS_AUTHOR_ID), currentUser.getId()));
+            predicates.add(criteriaBuilder.equal(followers.get(ECO_NEWS_AUTHOR_ID), currentUserId));
         }
 
         Predicate result;
@@ -761,15 +743,14 @@ public class EcoNewsServiceImpl implements EcoNewsService {
             : criteriaBuilder.or(predicateList.toArray(new Predicate[0]));
     }
 
-    private User getUserByEmail(String email) {
+    private Long getUserIdByEmail(String email) {
         return userRepo.findByEmail(email)
+            .map(User::getId)
             .orElseThrow(() -> new NotFoundException(ErrorMessage.USER_NOT_FOUND_BY_EMAIL + email));
     }
 
     /**
      * {@inheritDoc}
-     *
-     * @author Viktoriia Herchanivska.
      */
     @CacheEvict(value = CacheConstants.NEWEST_ECO_NEWS_CACHE_NAME, allEntries = true)
     @Override
@@ -777,11 +758,8 @@ public class EcoNewsServiceImpl implements EcoNewsService {
         if (user.getRole() != Role.ROLE_ADMIN) {
             throw new BadRequestException(ErrorMessage.USER_HAS_NO_PERMISSION);
         }
-        EcoNews ecoNews = ecoNewsRepo
-            .findById(id)
-            .orElseThrow(() -> new NotFoundException(ErrorMessage.ECO_NEW_NOT_FOUND_BY_ID + id));
+        EcoNews ecoNews = findEcoNewsById(id);
         ecoNews.setHidden(value);
-
         ecoNewsRepo.save(ecoNews);
     }
 
